# gpha-mscape-fastq-read-stats

./: README.md  pyproject.toml
src/fastq_read_stats/: fastq_read_statsMP.py
test/: test_fastq_read_stats.py
